compiler/testData/diagnostics/testsWithStdLib/kt55747.kt
// FIR_IDENTICAL

object Rem {
    <!INAPPLICABLE_OPERATOR_MODIFIER!>operator<!> fun mod(x: Int) {}
    <!INAPPLICABLE_OPERATOR_MODIFIER!>operator<!> fun modAssign(x: Int) {}
}
